[package]
name = "spin-async-mpsc"
version = "0.3.21"
edition = "2021"

[dependencies]
crossbeam-queue = { version = "0.3.5", default-features = false, features = ["alloc"] }
futures-core = { version = "0.3.21", default-features = false, features = ["alloc"] }
spin = { version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
futures = "0.3.21"
futures-test = "0.3.21"
